# db-practice

./: 123  Makefile  OEF.h  README.md  base.h  file  interact.cpp  interact.h  main.cpp
1/: 0  1.c  3  Makefile
11/: 26  26.bc  26.c  26.dsm  26.json  26.ll  26_32  5  5.bc  5.c  5.dsm  5.json  5.ll  5_32
automake/: build.sh  clean.sh  configure.ac
automake/src/: Makefile  Makefile.am  Makefile.in  OEF.cpp  OEF.h  base.h  interact.cpp  interact.h  main
automake/src/.deps/: Menu.Po  OEF.Po  Table.Po  base.Po  interact.Po  main.Po  menu.Po  military.Po
coverage/: OEF.cpp.gcov  OEF.h.gcov  alloc_traits.h.gcov  allocator.h.gcov  base.cpp.gcov  base.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  char_traits.h.gcov  interact.cpp.gcov  ios_base.h.gcov  iostream.gcov  limits.gcov  main.cpp.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  stl_algobase.h.gcov  stl_construct.h.gcov  stl_iterator.h.gcov  stl_iterator_base_funcs.h.gcov  stl_iterator_base_types.h.gcov  stl_uninitialized.h.gcov  stl_vector.h.gcov  type_traits.h.gcov  vector.tcc.gcov
include/: interact.h
other/4/: Makefile  main.cpp  out
other/4/coverage/: iostream.gcov  main.cpp.gcov
pr5/: Makefile  a.out  pr.asm  pr.c  pr.cpp  test
pr8/: book.fo  com.sh  commands  test.xml
src/: base.cpp  interact.cpp  main.cpp
src/unittest/: unittest.cpp
